# paper-report-mcp

./: README.md  pyproject.toml  requirements.txt
config/: config.json
src/paper_report_mcp/: __init__.py  __main__.py  config.py  logger.py  server.py  utils.py
src/paper_report_mcp/tools/: __init__.py  download.py  list_papers.py  read_paper.py  search.py
