[project]
name = "paper-report-mcp"
version = "0.1.0"
description = "arxiv paper report MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.8.0",
    "arxiv>=2.1.0",
    "pymupdf4llm>=0.0.17",
    "pdf2zh>=1.9.10",
    "pymupdf>=1.26.4"
]

[tool.uv.sources]
mcp = { workspace = true }
